styling is done !

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="row row-cols-1 row-cols-lg-2 text-center">
             <div class="col mt-5">
-                <h2 class="mb-5 ">What We Do</h2>
+                <h2 class="mb-sm-5 mb-0 ">What We Do</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore dolorum error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur aut sint deleniti laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate dicta blanditiis similique praesentium temporibus adipisci debitis labore!
 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore dolorum error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur aut sint deleniti laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate dicta blanditiis similique praesentium temporibus adipisci debitis labore!</p>
