--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
 <section class="services-cards my-5 py-5">
     <div class="container">
         <div class="card-deck">
-            <div class="card text-center">
+            <div class="card text-center shadow-lg rounded-lg">
                 <div class="card-header bg-dark text-white">
                     <h3>Service Plan One</h3>
                 </div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <div class="card text-center">
+            <div class="card text-center shadow-lg rounded-lg">
                 <div class="card-header bg-dark text-white">
                     <h3>Service Plan One</h3>
                 </div>
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <div class="card text-center">
+            <div class="card text-center shadow-lg rounded-lg">
                 <div class="card-header bg-dark text-white">
                     <h3>Service Plan One</h3>
                 </div>
